--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<button type="button" value="-">&minus;</button>
 				<button type="button" value="AC">AC</button>
 				
-				<button type="button" value="=">=</button>
+				<button type="button" value="=">&equals;</button>
 
 			</section>
 		</section>
