--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<button type="button" value="7">7</button>
 				<button type="button" value="8">8</button>
 				<button type="button" value="9">9</button>
-				<button type="button" value="/">/</button>
+				<button type="button" value="/">&divide;</button>
 				
 				<button type="button" value="4">4</button>
 				<button type="button" value="5">5</button>
