--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<button type="button" value="0">0</button>
 				<button type="button" value=".">.</button>
 				<button type="button" value="-">&minus;</button>
-				<button type="button" value="AC">AC</button>
+				<button type="button" value="AC" class="clear-btn">AC</button>
 				
 				<button type="button" value="=">&equals;</button>
 
